17-Microservices-with-AppMesh/17-02-Enable-AppMesh-for-Microservices/kube-manifests/V1-Microservices-AppMesh-Deployment/04-notification-microservice-Deployment-Service-v1.yml
apiVersion: v1
kind: Service
metadata:
  name: notification-v1
  namespace: microservices
  labels:
    app: notification-v1
spec:
  selector:
    app: notification-v1
  ports:
    - protocol: TCP
      port: 8096
      targetPort: 8096
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-v1
  namespace: microservices
  labels:
    app: notification-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-v1
  template:
    metadata:
      labels:
        app: notification-v1
    spec:
      serviceAccountName: my-microservices-sa1
      containers:
      - name: notification-v1
        image: stacksimplify/kube-notifications-microservice:1.0.0
        ports:
        - containerPort: 8096
        imagePullPolicy: Always
