17-Microservices-with-AppMesh/17-02-Enable-AppMesh-for-Microservices/kube-manifests/V1-Microservices-AppMesh-Deployment/07-usermgmt-microservice-Deployment-Service-H2DB.yml
apiVersion: v1
kind: Service
metadata:
  name: usermgmt-v1
  namespace: microservices
  labels:
    app: usermgmt-v1
spec:
  selector:
    app: usermgmt-v1
  ports:
    - protocol: TCP
      port: 8095
      targetPort: 8095
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermgmt-v1
  namespace: microservices
  labels:
    app: usermgmt-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermgmt-v1
  template:
    metadata:
      labels:
        app: usermgmt-v1
    spec:
      serviceAccountName: my-microservices-sa1
      containers:
      - name: usermgmt-v1
        image: stacksimplify/kube-usermanagement-microservice:2.0.0-H2DB
        ports:
        - containerPort: 8095
