17-Microservices-with-AppMesh/17-02-Enable-AppMesh-for-Microservices/kube-manifests/V1-Microservices-AppMesh-Deployment/02-virtual-service-notification-microservice.yml
apiVersion: appmesh.k8s.aws/v1beta1
kind: VirtualService
metadata:
  name: notification-v1.microservices.svc.cluster.local
  namespace: microservices
spec:
  meshName: appmesh
  virtualRouter:
    name: notification-virtual-router
    listeners:
      - portMapping:
          port: 8096
          protocol: http
  routes:
    - name: notification-route
      http:
        match:
          prefix: /
        action:
          weightedTargets:
            - virtualNodeName: notification-v1
              weight: 1
